--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
+[build-system]
+requires = ["hatchling>=1.22"]
+build-backend = "hatchling.build"
+
 [project]
 name = "endfield-futures"
 version = "0.1.0"
-description = "Add your description here"
+description = "Endfield Futures web demo"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
-    "fastapi>=0.128.2",
+    "fastapi>=0.110",
     "loguru>=0.7.3",
-    "uvicorn>=0.40.0",
+    "uvicorn[standard]>=0.27",
 ]
